<resources>
    <string name="app_name" translatable="false">Camrepo</string>
    <string name="edit_list_items">Edit</string>
    <string name="delete_selected_items">Delete</string>
    <string name="delete_confirm_message">Delete Items?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="create_new_note">Create New Note</string>
    <string name="edit_note_title" translatable="false">Edit Note Title</string>
    <string name="slideshow">Slideshow</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="default_note_title">New Note</string>
    <string name="default_note_sub_title">Sub Title</string>
    <string name="request_camera_permission_message">This app needs permission to access camera and storage to take photos.</string>
    <string name="desc_shutter" translatable="false">Shutter Button</string>
    <string name="desc_close_camera" translatable="false">Close Camera</string>
    <string name="desc_flash_button" translatable="false">Flash Button</string>
    <string name="hint_page_title">Page Title</string>
    <string name="hint_memo">Memo</string>
    <string name="settings">Settings</string>
    <string name="photoView" translatable="false">Photo View</string>
    <string name="drag_handle" translatable="false">Drag Handle</string>

    <!-- Shared Preference -->
    <string name="preference_file" translatable="false">net.engawapg.app.Camrepo.PREFERENCE_FILE</string>
    <string name="preference_key_flash_mode" translatable="false">PREFERENCE_KEY_FLASH_MODE</string>
    <string name="preference_key_selected_file" translatable="false">PREFERENCE_KEY_SELECTED_FILE</string>

    <!-- About App Preferences -->
    <string name="about_app_header">About App</string>
    <string name="pref_key_version" translatable="false">PrefKeyVersion</string>
    <string name="pref_title_version">Version</string>
    <string name="default_page_title">New Page</string>
    <string name="desc_edit_button" translatable="false">Edit Button</string>
    <string name="request_camera_permission_message_sdk29">This app needs permission to access camera to take photos.</string>
    <string name="desc_app_icon" translatable="false">App Icon</string>
    <string name="desc_add_new_page" translatable="false">Add new page</string>
    <string name="desc_setting" translatable="false">Setting</string>
    <string name="desc_edit_note_list" translatable="false">Edit note list</string>
    <string name="desc_close_edit_mode" translatable="false">Close Edit Mode</string>
    <string name="desc_delete_note" translatable="false">Delete Note</string>
    <string name="desc_note_icon" translatable="false">Note Icon</string>
    <string name="desc_add_new_note" translatable="false">Add new note</string>
    <string name="app_folder_name" translatable="false">Camrepo</string>

</resources>